--- a/order.html
+++ b/order.html
@@ -44,7 +44,7 @@
 					<!-- Second column -->
 					<div class="top-header__column top-header__column_center">
 						<!-- Logo -->
-						<a href="../home.html" class="top-header__logo-image">
+						<a href="../index.html" class="top-header__logo-image">
 							<img src="img/logo.svg" alt="logo">
 						</a>
 					</div>
