--- a/index.html
+++ b/index.html
@@ -889,7 +889,7 @@
 				</div>
 				<div class="footer__logo logo-block">
 					<div class="logo-block__body">
-						<a href="" class="logo-block__logo"><img src="img/footer/logo-grey.svg" alt="logo"></a>
+						<a href="../Water-Delivery/index.html" class="logo-block__logo"><img src="img/footer/logo-grey.svg" alt="logo"></a>
 					</div>
 					<div class="logo-block__copyr">
 						<p>C 2023 AQUA SWIT</p>
