--- a/order.html
+++ b/order.html
@@ -44,7 +44,7 @@
 					<!-- Second column -->
 					<div class="top-header__column top-header__column_center">
 						<!-- Logo -->
-						<a href="../index.html" class="top-header__logo-image">
+						<a href="../Water-Delivery/index.html" class="top-header__logo-image">
 							<img src="img/logo.svg" alt="logo">
 						</a>
 					</div>
@@ -749,7 +749,7 @@
 				</div>
 				<div class="footer__logo logo-block">
 					<div class="logo-block__body">
-						<a href="" class="logo-block__logo"><img src="img/footer/logo-grey.svg" alt="logo"></a>
+						<a href="../Water-Delivery/index.html" class="logo-block__logo"><img src="img/footer/logo-grey.svg" alt="logo"></a>
 					</div>
 					<div class="logo-block__copyr">
 						<p>C 2023 AQUA SWIT</p>
