--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 									<div class="language-select__current">UA</div>
 									<button type="button" data-spoller data-spoller-close class="language-select__arrow _icon-lang-arrow"></button>
 									<ul class="language-select__list">
-										<li><a href="../index_EN.html" class="language-select__link">EN</a></li>
-										<li><a href="../index_RU.html" class="language-select__link">RU</a></li>
+										<li><a href="../Water-Delivery/EN/index_EN.html" class="language-select__link">EN</a></li>
+										<li><a href="../Water-Delivery/RU/index_RU.html" class="language-select__link">RU</a></li>
 									</ul>
 								</div>
 							</div>
@@ -87,8 +87,8 @@
 							<div class="language-select__current">UA</div>
 							<button type="button" data-spoller data-spoller-close class="language-select__arrow _icon-lang-arrow"></button>
 							<ul class="language-select__list">
-								<li><a href="../index_EN.html" class="language-select__link">EN</a></li>
-								<li><a href="../index_RU.html" class="language-select__link">RU</a></li>
+								<li><a href="../Water-Delivery/EN/index_EN.html" class="language-select__link">EN</a></li>
+								<li><a href="../Water-Delivery/RU/index_RU.html" class="language-select__link">RU</a></li>
 							</ul>
 						</div>
 					</div>
@@ -892,7 +892,7 @@
 						<a href="../Water-Delivery/index.html" class="logo-block__logo"><img src="img/footer/logo-grey.svg" alt="logo"></a>
 					</div>
 					<div class="logo-block__copyr">
-						<p>C 2023 AQUA SWIT</p>
+						<p>C 2023 BASHYLOV OLEG</p>
 						<p>ALL RIGHTS RESERVED</p>
 					</div>
 				</div>
