--- a/RU/index_RU.html
+++ b/RU/index_RU.html
@@ -425,7 +425,7 @@
 													<div class="slider-product__volume">1.5<span>л</span></div>
 													<div class="slider-product__price">19<span> грн</span></div>
 												</div>
-												<a hreorder_RU.html="#" class="slider-product__button button">Заказать</a>
+												<a href="#" class="slider-product__button button">Заказать</a>
 											</div>
 										</div>
 										<div class="slider-product__pagination slider-product__pagination_4"></div>
