--- a/EN/index_EN.html
+++ b/EN/index_EN.html
@@ -424,7 +424,7 @@
 													<div class="slider-product__volume">1.5<span>L</span></div>
 													<div class="slider-product__price">19<span> hrn</span></div>
 												</div>
-												<a hreorder_EN.html="#" class="slider-product__button button">Make Order</a>
+												<a href="#" class="slider-product__button button">Make Order</a>
 											</div>
 										</div>
 										<div class="slider-product__pagination slider-product__pagination_4"></div>
