--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
 													<div class="slider-product__volume">1.5<span>л</span></div>
 													<div class="slider-product__price">19<span> грн</span></div>
 												</div>
-												<a hreorder.html="#" class="slider-product__button button">Замовити</a>
+												<a href="#" class="slider-product__button button">Замовити</a>
 											</div>
 										</div>
 										<div class="slider-product__pagination slider-product__pagination_4"></div>
