--- a/EN/index_EN.html
+++ b/EN/index_EN.html
@@ -11,7 +11,7 @@
 	<link rel="alternate" hreflang="ru" href="https://aqua-swit.ua/ru/">
 	<link rel="alternate" hreflang="en" href="https://aqua-swit.ua/en/"> -->
 
-	<link rel="stylesheet" href="../Water-Delivery/css/style.min.css?_v=20230317232517">
+	<link rel="stylesheet" href="../../Water-Delivery/css/style.min.css?_v=20230317232517">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
