--- a/EN/index_EN.html
+++ b/EN/index_EN.html
@@ -850,7 +850,7 @@
 		</div>
 	</div>
 </div> -->
-	<script src="../Water-Delivery/js/app.min.js?_v=20230317232517"></script>
+	<script src="../../Water-Delivery/js/app.min.js?_v=20230317232517"></script>
 </body>
 
 </html>
