--- a/EN/index_EN.html
+++ b/EN/index_EN.html
@@ -48,7 +48,7 @@
 					<!-- Second column -->
 					<div class="top-header__column top-header__column_center">
 						<!-- Logo -->
-						<a href="../home.html" class="top-header__logo-image">
+						<a href="../../Water-Delivery/index.html" class="top-header__logo-image">
 							<img src="../../Water-Delivery/img/logo.svg" alt="logo">
 						</a>
 					</div>
