--- a/RU/index_RU.html
+++ b/RU/index_RU.html
@@ -12,7 +12,7 @@
 	<link rel="alternate" hreflang="en" href="https://aqua-swit.ua/en/"> -->
 
 	<link rel="stylesheet" href="../../Water-Delivery/css/style.min.css?_v=20230317232517">
-	<link rel="shortcut icon" href="favicon.ico">
+	<link rel="shortcut icon" href="../../Water-Delivery/favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -33,8 +33,8 @@
 									<div class="language-select__current">RU</div>
 									<button type="button" data-spoller data-spoller-close class="language-select__arrow _icon-lang-arrow"></button>
 									<ul class="language-select__list">
-										<li><a href="../home.html" class="language-select__link">UA</a></li>
-										<li><a href="../home_EN.html" class="language-select__link">EN</a></li>
+										<li><a href="../../Water-Delivery/index.html" class="language-select__link">UA</a></li>
+										<li><a href="../../Water-Delivery/index_EN.html" class="language-select__link">EN</a></li>
 									</ul>
 								</div>
 							</div>
@@ -48,8 +48,8 @@
 					<!-- Second column -->
 					<div class="top-header__column top-header__column_center">
 						<!-- Logo -->
-						<a href="../home.html" class="top-header__logo-image">
-							<img src="img/logo.svg" alt="logo">
+						<a href="../../Water-Delivery/index.html" class="top-header__logo-image">
+							<img src="../../Water-Delivery/img/logo.svg" alt="logo">
 						</a>
 					</div>
 					<!-- Third (last) column -->
@@ -811,7 +811,7 @@
 				</div>
 				<div class="footer__logo logo-block">
 					<div class="logo-block__body">
-						<a href="" class="logo-block__logo"><img src="img/footer/logo-grey.svg" alt="logo"></a>
+						<a href="../../Water-Delivery/index.html" class="logo-block__logo"><img src="../../Water-Delivery/img/footer/logo-grey.svg" alt="logo"></a>
 					</div>
 					<div class="logo-block__copyr">
 						<p>C 2023 OLEG BASHYLOV</p>
