--- a/EN/index_EN.html
+++ b/EN/index_EN.html
@@ -33,8 +33,8 @@
 									<div class="language-select__current">EN</div>
 									<button type="button" data-spoller data-spoller-close class="language-select__arrow _icon-lang-arrow"></button>
 									<ul class="language-select__list">
-										<li><a href="../home.html" class="language-select__link">UA</a></li>
-										<li><a href="../home_RU.html" class="language-select__link">RU</a></li>
+										<li><a href="../../Water-Delivery/index.html" class="language-select__link">UA</a></li>
+										<li><a href="../../Water-Delivery/index_RU.html" class="language-select__link">RU</a></li>
 									</ul>
 								</div>
 							</div>
@@ -87,8 +87,8 @@
 							<div class="language-select__current">EN</div>
 							<button type="button" data-spoller data-spoller-close class="language-select__arrow _icon-lang-arrow"></button>
 							<ul class="language-select__list">
-								<li><a href="../home.html" class="language-select__link">UA</a></li>
-								<li><a href="../home_RU.html" class="language-select__link">RU</a></li>
+								<li><a href="../../Water-Delivery/index.html" class="language-select__link">UA</a></li>
+								<li><a href="../../Water-Delivery/index_RU.html" class="language-select__link">RU</a></li>
 							</ul>
 						</div>
 					</div>
