--- a/RU/index_RU.html
+++ b/RU/index_RU.html
@@ -87,8 +87,8 @@
 							<div class="language-select__current">RU</div>
 							<button type="button" data-spoller data-spoller-close class="language-select__arrow _icon-lang-arrow"></button>
 							<ul class="language-select__list">
-								<li><a href="../home.html" class="language-select__link">UA</a></li>
-								<li><a href="../home_EN.html" class="language-select__link">EN</a></li>
+								<li><a href="../../Water-Delivery/index.html" class="language-select__link">UA</a></li>
+								<li><a href="../../Water-Delivery/index_EN.html" class="language-select__link">EN</a></li>
 							</ul>
 						</div>
 					</div>
