--- a/RU/index_RU.html
+++ b/RU/index_RU.html
@@ -62,7 +62,7 @@
 							</a>
 							<div class="phone-header__item">
 								<div class="phone-header__icon">
-									<img src="img/header/24-phone.svg" alt="clock-icon">
+									<img src="../../Water-Delivery/img/header/24-phone.svg" alt="clock-icon">
 								</div>
 								<a href="tel:380441234567" class="phone-header__link">044-123-45-67</a>
 							</div>
