--- a/EN/index_EN.html
+++ b/EN/index_EN.html
@@ -108,7 +108,7 @@
 							<div class="slider-main__wrapper swiper-wrapper">
 								<div class="slider-main__slide slide-main-block swiper-slide">
 									<div class="slider-main__image">
-										<picture><source srcset="img/main-block/bg.webp" type="image/webp"><img src="img/main-block/bg.jpg" data-swiper-parallax="-20%" alt="image"></picture>
+										<picture><source srcset="../../Water-Delivery/img/main-block/bg.webp" type="image/webp"><img src="../../Water-Delivery/img/main-block/bg.jpg" data-swiper-parallax="-20%" alt="image"></picture>
 									</div>
 									<div class="slide-main-block__content">
 										<h2 class="slide-main-block__title" data-swiper-parallax-opacity="0" data-swiper-parallax-scale="0.2">promotion for<br>new customers</h2>
