--- a/EN/index_EN.html
+++ b/EN/index_EN.html
@@ -119,7 +119,7 @@
 								</div>
 								<div class="slider-main__slide slide-main-block swiper-slide">
 									<div class="slider-main__image">
-										<picture><source srcset="img/main-block/bg2.webp" type="image/webp"><img src="img/main-block/bg2.jpg" data-swiper-parallax="-20%" alt="image"></picture>
+										<picture><source srcset="../../Water-Delivery/img/main-block/bg2.webp" type="image/webp"><img src="../../Water-Delivery/img/main-block/bg2.jpg" data-swiper-parallax="-20%" alt="image"></picture>
 									</div>
 									<div class="slide-main-block__content">
 										<h2 class="slide-main-block__title" data-swiper-parallax-opacity="0" data-swiper-parallax-scale="0.2">orders<br>for more than 1000 hrn</h2>
@@ -129,7 +129,7 @@
 								</div>
 								<div class="slider-main__slide slide-main-block swiper-slide">
 									<div class="slider-main__image">
-										<picture><source srcset="img/main-block/bg3.webp" type="image/webp"><img src="img/main-block/bg3.jpg" data-swiper-parallax="-20%" alt="image"></picture>
+										<picture><source srcset="../../Water-Delivery/img/main-block/bg3.webp" type="image/webp"><img src="../../Water-Delivery/img/main-block/bg3.jpg" data-swiper-parallax="-20%" alt="image"></picture>
 									</div>
 									<div class="slide-main-block__content">
 										<h2 class="slide-main-block__title" data-swiper-parallax-opacity="0" data-swiper-parallax-scale="0.2">we work<br>on weekens and holidays</h2>
