--- a/RU/index_RU.html
+++ b/RU/index_RU.html
@@ -108,7 +108,7 @@
 							<div class="slider-main__wrapper swiper-wrapper">
 								<div class="slider-main__slide slide-main-block swiper-slide">
 									<div class="slider-main__image">
-										<picture><source srcset="img/main-block/bg.webp" type="image/webp"><img src="img/main-block/bg.jpg" data-swiper-parallax="-20%" alt="image"></picture>
+										<picture><source srcset="../../Water-Delivery/img/main-block/bg.webp" type="image/webp"><img src="../../Water-Delivery/img/main-block/bg.jpg" data-swiper-parallax="-20%" alt="image"></picture>
 									</div>
 									<div class="slide-main-block__content">
 										<h2 class="slide-main-block__title" data-swiper-parallax-opacity="0" data-swiper-parallax-scale="0.2">акция для<br>новых клиентов</h2>
@@ -119,7 +119,7 @@
 								</div>
 								<div class="slider-main__slide slide-main-block swiper-slide">
 									<div class="slider-main__image">
-										<picture><source srcset="img/main-block/bg2.webp" type="image/webp"><img src="img/main-block/bg2.jpg" data-swiper-parallax="-20%" alt="image"></picture>
+										<picture><source srcset="../../Water-Delivery/img/main-block/bg2.webp" type="image/webp"><img src="../../Water-Delivery/img/main-block/bg2.jpg" data-swiper-parallax="-20%" alt="image"></picture>
 									</div>
 									<div class="slide-main-block__content">
 										<h2 class="slide-main-block__title" data-swiper-parallax-opacity="0" data-swiper-parallax-scale="0.2">заказ<br>на сумму больше 1000 грн</h2>
@@ -129,7 +129,7 @@
 								</div>
 								<div class="slider-main__slide slide-main-block swiper-slide">
 									<div class="slider-main__image">
-										<picture><source srcset="img/main-block/bg3.webp" type="image/webp"><img src="img/main-block/bg3.jpg" data-swiper-parallax="-20%" alt="image"></picture>
+										<picture><source srcset="../../Water-Delivery/img/main-block/bg3.webp" type="image/webp"><img src="../../Water-Delivery/img/main-block/bg3.jpg" data-swiper-parallax="-20%" alt="image"></picture>
 									</div>
 									<div class="slide-main-block__content">
 										<h2 class="slide-main-block__title" data-swiper-parallax-opacity="0" data-swiper-parallax-scale="0.2">работаем<br>в выходные и праздники</h2>
