--- a/EN/index_EN.html
+++ b/EN/index_EN.html
@@ -172,27 +172,27 @@
 						<div class="advantages-block__list list-advantages">
 							<ul class="list-advantages__items">
 								<li class="list-advantages__item">
-									<div class="list-advantages__image"><img src="img/advantages/advant-free.svg" alt="icon"></div>
+									<div class="list-advantages__image"><img src="../../Water-Delivery/img/advantages/advant-free.svg" alt="icon"></div>
 									<p class="list-advantages__text">You pay only for water<br>- we deliver it<span> for free</span></p>
 								</li>
 								<li class="list-advantages__item">
-									<div class="list-advantages__image"><img src="img/advantages/advant-wide-range.svg" alt="icon"></div>
+									<div class="list-advantages__image"><img src="../../Water-Delivery/img/advantages/advant-wide-range.svg" alt="icon"></div>
 									<p class="list-advantages__text"><span>Wide range </span> of water<br>from different manufacturers</p>
 								</li>
 								<li class="list-advantages__item">
-									<div class="list-advantages__image"><img src="img/advantages/advant-any-time.svg" alt="icon"></div>
+									<div class="list-advantages__image"><img src="../../Water-Delivery/img/advantages/advant-any-time.svg" alt="icon"></div>
 									<p class="list-advantages__text">Water delivery at<span> convenient </span><br>for Client<span> time</span></p>
 								</li>
 								<li class="list-advantages__item">
-									<div class="list-advantages__image"><img src="img/advantages/advant-availability.svg" alt="icon"></div>
+									<div class="list-advantages__image"><img src="../../Water-Delivery/img/advantages/advant-availability.svg" alt="icon"></div>
 									<p class="list-advantages__text">We take orders<span> 24 </span><br>hours a day<span> 7 </span>days a week</p>
 								</li>
 								<li class="list-advantages__item">
-									<div class="list-advantages__image"><img src="img/advantages/advant-any-payment.svg" alt="icon"></div>
+									<div class="list-advantages__image"><img src="../../Water-Delivery/img/advantages/advant-any-payment.svg" alt="icon"></div>
 									<p class="list-advantages__text">Any <span>payment method</span><br>available for Client</p>
 								</li>
 								<li class="list-advantages__item">
-									<div class="list-advantages__image"><img src="img/advantages/advant-reliability.svg" alt="icon"></div>
+									<div class="list-advantages__image"><img src="../../Water-Delivery/img/advantages/advant-reliability.svg" alt="icon"></div>
 									<p class="list-advantages__text"><span>Reliability </span>and<span><br>punctuality</span></p>
 								</li>
 							</ul>
