--- a/RU/index_RU.html
+++ b/RU/index_RU.html
@@ -173,27 +173,27 @@
 						<div class="advantages-block__list list-advantages">
 							<ul class="list-advantages__items">
 								<li class="list-advantages__item">
-									<div class="list-advantages__image"><img src="img/advantages/advant-free.svg" alt="icon"></div>
+									<div class="list-advantages__image"><img src="../../Water-Delivery/img/advantages/advant-free.svg" alt="icon"></div>
 									<p class="list-advantages__text">Вы платите только за воду<br>- мы доставлем её<span> бесплатно</span></p>
 								</li>
 								<li class="list-advantages__item">
-									<div class="list-advantages__image"><img src="img/advantages/advant-wide-range.svg" alt="icon"></div>
+									<div class="list-advantages__image"><img src="../../Water-Delivery/img/advantages/advant-wide-range.svg" alt="icon"></div>
 									<p class="list-advantages__text">Шырокий<span> ассортимент </span> воды<br>разных производителей</p>
 								</li>
 								<li class="list-advantages__item">
-									<div class="list-advantages__image"><img src="img/advantages/advant-any-time.svg" alt="icon"></div>
+									<div class="list-advantages__image"><img src="../../Water-Delivery/img/advantages/advant-any-time.svg" alt="icon"></div>
 									<p class="list-advantages__text">Доставка воды в<span> удобное </span><br>для Клиента<span> время</span></p>
 								</li>
 								<li class="list-advantages__item">
-									<div class="list-advantages__image"><img src="img/advantages/advant-availability.svg" alt="icon"></div>
+									<div class="list-advantages__image"><img src="../../Water-Delivery/img/advantages/advant-availability.svg" alt="icon"></div>
 									<p class="list-advantages__text">Принимаем заказы<span> 24 </span><br>часа в сутки<span> 7 </span>дней в неделю</p>
 								</li>
 								<li class="list-advantages__item">
-									<div class="list-advantages__image"><img src="img/advantages/advant-any-payment.svg" alt="icon"></div>
+									<div class="list-advantages__image"><img src="../../Water-Delivery/img/advantages/advant-any-payment.svg" alt="icon"></div>
 									<p class="list-advantages__text">Любая удобная для Клиента<span><br>форма рассчета</span></p>
 								</li>
 								<li class="list-advantages__item">
-									<div class="list-advantages__image"><img src="img/advantages/advant-reliability.svg" alt="icon"></div>
+									<div class="list-advantages__image"><img src="../../Water-Delivery/img/advantages/advant-reliability.svg" alt="icon"></div>
 									<p class="list-advantages__text"><span>Надежность </span>и<span><br>пунктуальность</span></p>
 								</li>
 							</ul>
