--- a/EN/index_EN.html
+++ b/EN/index_EN.html
@@ -213,7 +213,7 @@
 				<div class="product-catalog__container">
 					<div class="product-catalog__image image-product-catalog">
 						<div class="image-product-catalog__body">
-							<picture><source srcset="img/product-catalog/glass.webp" type="image/webp"><img src="img/product-catalog/glass.png" alt="Зображення"></picture>
+							<picture><source srcset="img/product-catalog/glass.webp" type="image/webp"><img src="../../Water-Delivery/img/product-catalog/glass.png" alt="Зображення"></picture>
 						</div>
 					</div>
 					<div class="product-catalog__body">
@@ -225,7 +225,7 @@
 										<div class="slider-product__wrapper swiper-wrapper">
 											<div class="slider-product__slide swiper-slide">
 												<div class="slider-product__image">
-													<picture><source srcset="img/product-catalog/19-1.webp" type="image/webp"><img src="img/product-catalog/19-1.png" alt="Зображення"></picture>
+													<picture><source srcset="../../Water-Delivery/img/product-catalog/19-1.webp" type="image/webp"><img src="../../Water-Delivery/img/product-catalog/19-1.png" alt="Зображення"></picture>
 												</div>
 												<div class="slider-product__content">
 													<h4 class="slider-product__title">Water Моршинська</h4>
@@ -236,7 +236,7 @@
 											</div>
 											<div class="slider-product__slide swiper-slide">
 												<div class="slider-product__image">
-													<picture><source srcset="img/product-catalog/19-2.webp" type="image/webp"><img src="img/product-catalog/19-2.png" alt="Зображення"></picture>
+													<picture><source srcset="../../Water-Delivery/img/product-catalog/19-2.webp" type="image/webp"><img src="../../Water-Delivery/img/product-catalog/19-2.png" alt="Зображення"></picture>
 												</div>
 												<div class="slider-product__content">
 													<h4 class="slider-product__title">Water Аляска</h4>
@@ -247,7 +247,7 @@
 											</div>
 											<div class="slider-product__slide swiper-slide">
 												<div class="slider-product__image">
-													<picture><source srcset="img/product-catalog/19-3.webp" type="image/webp"><img src="img/product-catalog/19-3.png" alt="Зображення"></picture>
+													<picture><source srcset="../../Water-Delivery/img/product-catalog/19-3.webp" type="image/webp"><img src="../../Water-Delivery/img/product-catalog/19-3.png" alt="Зображення"></picture>
 												</div>
 												<div class="slider-product__content">
 													<h4 class="slider-product__title">Water Росяна</h4>
@@ -258,7 +258,7 @@
 											</div>
 											<div class="slider-product__slide swiper-slide">
 												<div class="slider-product__image">
-													<picture><source srcset="img/product-catalog/19-4.webp" type="image/webp"><img src="img/product-catalog/19-4.png" alt="Зображення"></picture>
+													<picture><source srcset="../../Water-Delivery/img/product-catalog/19-4.webp" type="image/webp"><img src="../../Water-Delivery/img/product-catalog/19-4.png" alt="Зображення"></picture>
 												</div>
 												<div class="slider-product__content">
 													<h4 class="slider-product__title">Water Царичанська</h4>
@@ -278,7 +278,7 @@
 										<div class="slider-product__wrapper swiper-wrapper">
 											<div class="slider-product__slide swiper-slide">
 												<div class="slider-product__image">
-													<picture><source srcset="img/product-catalog/6-1.webp" type="image/webp"><img src="img/product-catalog/6-1.png" alt="Зображення"></picture>
+													<picture><source srcset="../../Water-Delivery/img/product-catalog/6-1.webp" type="image/webp"><img src="../../Water-Delivery/img/product-catalog/6-1.png" alt="Зображення"></picture>
 												</div>
 												<div class="slider-product__content">
 													<h4 class="slider-product__title">Water Моршинська (mineral)</h4>
@@ -289,7 +289,7 @@
 											</div>
 											<div class="slider-product__slide swiper-slide">
 												<div class="slider-product__image">
-													<picture><source srcset="img/product-catalog/6-2.webp" type="image/webp"><img src="img/product-catalog/6-2.png" alt="Зображення"></picture>
+													<picture><source srcset="../../Water-Delivery/img/product-catalog/6-2.webp" type="image/webp"><img src="../../Water-Delivery/img/product-catalog/6-2.png" alt="Зображення"></picture>
 												</div>
 												<div class="slider-product__content">
 													<h4 class="slider-product__title">Water Моршинська (mineral)</h4>
@@ -300,7 +300,7 @@
 											</div>
 											<div class="slider-product__slide swiper-slide">
 												<div class="slider-product__image">
-													<picture><source srcset="img/product-catalog/6-3.webp" type="image/webp"><img src="img/product-catalog/6-3.png" alt="Зображення"></picture>
+													<picture><source srcset="../../Water-Delivery/img/product-catalog/6-3.webp" type="image/webp"><img src="../../Water-Delivery/img/product-catalog/6-3.png" alt="Зображення"></picture>
 												</div>
 												<div class="slider-product__content">
 													<h4 class="slider-product__title">Water Росяна</h4>
@@ -311,7 +311,7 @@
 											</div>
 											<div class="slider-product__slide swiper-slide">
 												<div class="slider-product__image">
-													<picture><source srcset="img/product-catalog/6-4.webp" type="image/webp"><img src="img/product-catalog/6-4.png" alt="Зображення"></picture>
+													<picture><source srcset="../../Water-Delivery/img/product-catalog/6-4.webp" type="image/webp"><img src="../../Water-Delivery/img/product-catalog/6-4.png" alt="Зображення"></picture>
 												</div>
 												<div class="slider-product__content">
 													<h4 class="slider-product__title">Water Моршинська</h4>
@@ -331,7 +331,7 @@
 										<div class="slider-product__wrapper swiper-wrapper">
 											<div class="slider-product__slide swiper-slide">
 												<div class="slider-product__image">
-													<picture><source srcset="img/product-catalog/2-1.webp" type="image/webp"><img src="img/product-catalog/2-1.png" alt="Зображення"></picture>
+													<picture><source srcset="../../Water-Delivery/img/product-catalog/2-1.webp" type="image/webp"><img src="../../Water-Delivery/img/product-catalog/2-1.png" alt="Зображення"></picture>
 												</div>
 												<div class="slider-product__content">
 													<h4 class="slider-product__title">Water Оболонська-2 (carbonated)</h4>
@@ -342,7 +342,7 @@
 											</div>
 											<div class="slider-product__slide swiper-slide">
 												<div class="slider-product__image">
-													<picture><source srcset="img/product-catalog/2-2.webp" type="image/webp"><img src="img/product-catalog/2-2.png" alt="Зображення"></picture>
+													<picture><source srcset="../../Water-Delivery/img/product-catalog/2-2.webp" type="image/webp"><img src="../../Water-Delivery/img/product-catalog/2-2.png" alt="Зображення"></picture>
 												</div>
 												<div class="slider-product__content">
 													<h4 class="slider-product__title">Water Царичанська</h4>
@@ -353,7 +353,7 @@
 											</div>
 											<div class="slider-product__slide swiper-slide">
 												<div class="slider-product__image">
-													<picture><source srcset="img/product-catalog/2-3.webp" type="image/webp"><img src="img/product-catalog/2-3.png" alt="Зображення"></picture>
+													<picture><source srcset="../../Water-Delivery/img/product-catalog/2-3.webp" type="image/webp"><img src="../../Water-Delivery/img/product-catalog/2-3.png" alt="Зображення"></picture>
 												</div>
 												<div class="slider-product__content">
 													<h4 class="slider-product__title">Water Миргородська Лагідна</h4>
@@ -364,7 +364,7 @@
 											</div>
 											<div class="slider-product__slide swiper-slide">
 												<div class="slider-product__image">
-													<picture><source srcset="img/product-catalog/2-4.webp" type="image/webp"><img src="img/product-catalog/2-4.png" alt="Зображення"></picture>
+													<picture><source srcset="../../Water-Delivery/img/product-catalog/2-4.webp" type="image/webp"><img src="../../Water-Delivery/img/product-catalog/2-4.png" alt="Зображення"></picture>
 												</div>
 												<div class="slider-product__content">
 													<h4 class="slider-product__title">Water Бон Буасон (mineral)</h4>
@@ -384,7 +384,7 @@
 										<div class="slider-product__wrapper swiper-wrapper">
 											<div class="slider-product__slide swiper-slide">
 												<div class="slider-product__image">
-													<picture><source srcset="img/product-catalog/1-5-1.webp" type="image/webp"><img src="img/product-catalog/1-5-1.png" alt="Зображення"></picture>
+													<picture><source srcset="../../Water-Delivery/img/product-catalog/1-5-1.webp" type="image/webp"><img src="../../Water-Delivery/img/product-catalog/1-5-1.png" alt="Зображення"></picture>
 												</div>
 												<div class="slider-product__content">
 													<h4 class="slider-product__title">Water Bon Aqua (non-carbonated)</h4>
@@ -395,7 +395,7 @@
 											</div>
 											<div class="slider-product__slide swiper-slide">
 												<div class="slider-product__image">
-													<picture><source srcset="img/product-catalog/1-5-2.webp" type="image/webp"><img src="img/product-catalog/1-5-2.png" alt="Зображення"></picture>
+													<picture><source srcset="../../Water-Delivery/img/product-catalog/1-5-2.webp" type="image/webp"><img src="../../Water-Delivery/img/product-catalog/1-5-2.png" alt="Зображення"></picture>
 												</div>
 												<div class="slider-product__content">
 													<h4 class="slider-product__title">Water Бон Буасон Лимон</h4>
@@ -406,7 +406,7 @@
 											</div>
 											<div class="slider-product__slide swiper-slide">
 												<div class="slider-product__image">
-													<picture><source srcset="img/product-catalog/1-5-3.webp" type="image/webp"><img src="img/product-catalog/1-5-3.png" alt="Зображення"></picture>
+													<picture><source srcset="../../Water-Delivery/img/product-catalog/1-5-3.webp" type="image/webp"><img src="../../Water-Delivery/img/product-catalog/1-5-3.png" alt="Зображення"></picture>
 												</div>
 												<div class="slider-product__content">
 													<h4 class="slider-product__title">Water Миргородська (soft)</h4>
@@ -417,7 +417,7 @@
 											</div>
 											<div class="slider-product__slide swiper-slide">
 												<div class="slider-product__image">
-													<picture><source srcset="img/product-catalog/1-5-4.webp" type="image/webp"><img src="img/product-catalog/1-5-4.png" alt="Зображення"></picture>
+													<picture><source srcset="../../Water-Delivery/img/product-catalog/1-5-4.webp" type="image/webp"><img src="../../Water-Delivery/img/product-catalog/1-5-4.png" alt="Зображення"></picture>
 												</div>
 												<div class="slider-product__content">
 													<h4 class="slider-product__title">Water Моршинська (soft-carbonated)</h4>
@@ -437,7 +437,7 @@
 										<div class="slider-product__wrapper swiper-wrapper">
 											<div class="slider-product__slide swiper-slide">
 												<div class="slider-product__image">
-													<picture><source srcset="img/product-catalog/0-5-1.webp" type="image/webp"><img src="img/product-catalog/0-5-1.png" alt="Зображення"></picture>
+													<picture><source srcset="../../Water-Delivery/img/product-catalog/0-5-1.webp" type="image/webp"><img src="../../Water-Delivery/img/product-catalog/0-5-1.png" alt="Зображення"></picture>
 												</div>
 												<div class="slider-product__content">
 													<h4 class="slider-product__title">Water Карпатська Високогірна (carboanted)</h4>
@@ -448,7 +448,7 @@
 											</div>
 											<div class="slider-product__slide swiper-slide">
 												<div class="slider-product__image">
-													<picture><source srcset="img/product-catalog/0-5-2.webp" type="image/webp"><img src="img/product-catalog/0-5-2.png" alt="Зображення"></picture>
+													<picture><source srcset="../../Water-Delivery/img/product-catalog/0-5-2.webp" type="image/webp"><img src="../../Water-Delivery/img/product-catalog/0-5-2.png" alt="Зображення"></picture>
 												</div>
 												<div class="slider-product__content">
 													<h4 class="slider-product__title">Water Природне Джерело (non-carbonated)</h4>
@@ -459,7 +459,7 @@
 											</div>
 											<div class="slider-product__slide swiper-slide">
 												<div class="slider-product__image">
-													<picture><source srcset="img/product-catalog/0-5-3.webp" type="image/webp"><img src="img/product-catalog/0-5-3.png" alt="Зображення"></picture>
+													<picture><source srcset="../../Water-Delivery/img/product-catalog/0-5-3.webp" type="image/webp"><img src="../../Water-Delivery/img/product-catalog/0-5-3.png" alt="Зображення"></picture>
 												</div>
 												<div class="slider-product__content">
 													<h4 class="slider-product__title">Water Buvette (mineral)</h4>
@@ -470,7 +470,7 @@
 											</div>
 											<div class="slider-product__slide swiper-slide">
 												<div class="slider-product__image">
-													<picture><source srcset="img/product-catalog/0-5-4.webp" type="image/webp"><img src="img/product-catalog/0-5-4.png" alt="Зображення"></picture>
+													<picture><source srcset="../../Water-Delivery/img/product-catalog/0-5-4.webp" type="image/webp"><img src="../../Water-Delivery/img/product-catalog/0-5-4.png" alt="Зображення"></picture>
 												</div>
 												<div class="slider-product__content">
 													<h4 class="slider-product__title">Water Аква (non-carbonated)</h4>
